# jijin

./: .coverage  .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  run.bat  run.sh  打开方式.txt
.golutra/: local.json  roadmap.json  tmp_report.json  workspace.json
.golutra/skills/docx/: SKILL.md
.golutra/tmp/: review_report_cmd.json  task06_report_cmd.json  task_p1_01_report_cmd.json
app/: app.py
app/assets/: style.css
app/pages/: 01_fund_scanner.py  02_market_signals.py  03_portfolio_optimizer.py  04_performance.py  05_risk_report.py  06_backtest.py  07_my_portfolio.py  08_ai_chat.py  09_newcomer_guide.py
app/utils/: ai_advisor.py  csv_parser.py
knowledge/: 00-导读-新手必读.md
knowledge/01-基金基础/: 01-什么是基金.md  02-基金分类与风险等级.md
knowledge/02-投资入门/: 01-复利与时间价值.md  02-定投为什么适合小白.md  03-开户实战指南.md
knowledge/03-A股市场/: 01-A股市场概述.md  02-基金购买实战指南.md
knowledge/04-分析方法/: 01-看懂基金指标.md  02-技术指标入门.md  03-如何综合评估一只基金.md
knowledge/05-投资策略/: 01-定投策略详解.md  02-网格交易与波段操作.md  03-资产配置与再平衡.md
knowledge/06-风险管理/: 01-认识风险.md  02-仓位管理与止损策略.md
notebooks/: 00-白话入门.ipynb  01-你的第一笔基金数据.ipynb  02-基金对比与筛选.ipynb  03-定投策略回测.ipynb  04-构建投资组合.ipynb  05-市场估值分析.ipynb
scripts/analysis/: correlation.py  fund_scanner.py  performance.py  risk.py
scripts/data/: client.py  fetch_fund.py  fetch_index.py  fetch_stock.py
scripts/strategy/: backtest.py  portfolio.py  signals.py
scripts/utils/: indicators.py  viz.py
tests/: test_backtest.py  test_correlation.py  test_fund_scanner.py  test_indicators.py  test_performance.py  test_portfolio.py  test_risk.py  test_signals.py
(+15 files in other folders)
