[project]
name = "jijin"
version = "0.1.0"
description = "基金/A股投资学习与分析平台"
requires-python = ">=3.12"
dependencies = [
    "akshare>=1.14.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "plotly>=5.18.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "scipy>=1.12.0",
    "seaborn>=0.13.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.35.0",
    "openai>=1.50.0",
]

[project.optional-dependencies]
analysis = [
    "pandas-ta>=0.3.14",
    "scikit-learn>=1.4.0",
]
backtest = [
    "backtrader>=1.9.78",
]
all = [
    "pandas-ta>=0.3.14",
    "scikit-learn>=1.4.0",
    "backtrader>=1.9.78",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.3.0",
]
